new file created

--- a/hello.html
+++ b/hello.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
-    <p>how are you?</p>
-    <p>be cool</p>
-    <a href="hello.html">hello</a>
+    <h1>new html</h1>
 </body>
 </html>
