--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>hello world</h1>
     <p>how are you?</p>
+    <p>thank you</p>
     <p>be cool</p>
     <a href="hello.html">hello</a>
 </body>
